<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/firstFragment">

    <TextView
        android:id="@+id/txtInsegnamento"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/insegnamento"
        android:textColor="@color/color_text"
        android:gravity="center"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtInsegnamento"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="15dp"
        android:textSize="17sp"
        android:gravity="center"
        android:hint="@string/cerca_una_materia"
        android:inputType="text|textNoSuggestions"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInsegnamento" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewSelectInsegnamento"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_bottom"

        app:layout_constraintBottom_toTopOf="@+id/calendarContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtInsegnamento" />

    <TextView
        android:id="@+id/txtNoLessons"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="@string/nessun_risultato"
        android:textColor="@color/yellow"
        android:textSize="17sp"
        app:layout_constraintTop_toTopOf="@+id/recyclerViewSelectInsegnamento" />

    <LinearLayout
        android:id="@+id/calendarContainer"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/txtWeekDay"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/settimana_e_giorno"
            android:textColor="@color/color_text"
            android:gravity="center"
            android:textSize="17sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutSelectWeek"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            app:layout_constraintTop_toBottomOf="@id/txtWeekDay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/color_background"
            android:paddingHorizontal="15dp">

            <ImageView
                android:id="@+id/prevWeek"
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_arrow_left"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/arrow_left"/>

            <TextView
                android:id="@+id/monthYearTV"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/color_text"
                android:textAllCaps="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageView
                android:id="@+id/nextWeek"
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_arrow_right"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/arrow_right"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/daysOfWeek"
            android:layout_marginVertical="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lunedì"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/martedì"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mercoledì"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/giovedì"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/venerdì"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sabato"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/domenica"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="16sp"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/calendarRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layout_constraintTop_toBottomOf="@id/daysOfWeek"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>