<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <ImageView
        android:id="@+id/myUnitoLogo"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_myunito"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/myunito_logo" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="28dp"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/myUnitoLogo">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="30dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtLogin"
                    android:layout_width="140dp"
                    android:layout_height="35dp"
                    android:background="@drawable/text_unselected"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="@color/red"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/txtSignUp"
                    android:layout_width="140dp"
                    android:layout_height="35dp"
                    android:background="@drawable/text_selected"
                    android:gravity="center"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:textColorHint="@color/gray" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/gray" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutUsername"
                android:layout_width="match_parent"
                android:layout_height="80dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:textColorHint="@color/gray" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutName"
                android:layout_width="match_parent"
                android:layout_height="80dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName|textCapWords"
                    android:hint="@string/nome_e_cognome"
                    android:textColorHint="@color/gray" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txtForgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="1dp"
                android:text="@string/password_dimenticata"
                android:textColor="@color/gray"
                android:textSize="12sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:background="@drawable/text_selected"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/unito_background_logo"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:contentDescription="@string/unito_logo"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_unito_logo_sr"
        android:layout_marginBottom="-50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>