<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/secondFragment">

    <TextView
        android:id="@+id/txtDocente"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/docente"
        android:gravity="center"
        android:textSize="17sp"
        android:textColor="@color/color_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewSelectDocente"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/border_bottom"
        app:layout_constraintBottom_toTopOf="@+id/txtOrario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDocente" />

    <TextView
        android:id="@+id/txtOrario"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/orario"
        android:gravity="center"
        android:textSize="17sp"
        android:textColor="@color/color_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/selectOrario"/>

    <LinearLayout
        android:id="@+id/selectOrario"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:paddingHorizontal="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:paddingBottom="5dp">
            <TextView
                android:tag="8:00"
                android:id="@+id/btn8_10"
                android:text="@string/_8_00_10_00"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/gray_dark"
                android:layout_marginHorizontal="5dp"
                android:textSize="17sp"
                android:textColor="@color/gray_dark"/>
            <TextView
                android:tag="10:00"
                android:id="@+id/btn10_12"
                android:text="@string/_10_00_12_00"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/gray_dark"
                android:layout_marginHorizontal="5dp"
                android:textSize="17sp"
                android:textColor="@color/gray_dark"/>
            <TextView
                android:tag="12:00"
                android:id="@+id/btn12_14"
                android:text="@string/_12_00_14_00"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/gray_dark"
                android:layout_marginHorizontal="5dp"
                android:textSize="17sp"
                android:textColor="@color/gray_dark"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:paddingTop="5dp">
            <TextView
                android:tag="14:00"
                android:id="@+id/btn14_16"
                android:text="@string/_14_00_16_00"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/gray_dark"
                android:layout_marginHorizontal="5dp"
                android:textSize="17sp"
                android:textColor="@color/gray_dark"/>
            <TextView
                android:tag="16:00"
                android:id="@+id/btn16_18"
                android:text="@string/_16_00_18_00"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/gray_dark"
                android:layout_marginHorizontal="5dp"
                android:textSize="17sp"
                android:textColor="@color/gray_dark"/>
            <TextView
                android:tag="18:00"
                android:id="@+id/btn18_20"
                android:text="@string/_18_00_20_00"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/gray_dark"
                android:layout_marginHorizontal="5dp"
                android:textSize="17sp"
                android:textColor="@color/gray_dark"/>
        </LinearLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>