<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/border_bottom">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/materia"
                android:textSize="17sp"
                android:textColor="@android:color/darker_gray" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewInsegnamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textColor="?colorOnSecondary" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/data"
                android:textSize="17sp"
                android:textColor="@android:color/darker_gray" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="17sp"
                android:textColor="?colorOnSecondary" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/stato"
                android:textSize="17sp"
                android:textColor="@android:color/darker_gray" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewStato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="17sp"
                android:textColor="?colorOnSecondary" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>